--- a/src/components/mainPlaylist/mainPlaylist.css
+++ b/src/components/mainPlaylist/mainPlaylist.css
@@ -2,6 +2,3 @@
     margin-top: 15px;
 }
 
-#Add-new-song {
-    margin-left: 32px;
-}
